# djangopardy

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Containerfile  Dockerfile  README.md  djangopardy.cfg.example  docker-compose.yml  entrypoint.sh  pyproject.toml  renovate.json
.forgejo/workflows/: commitlint.yaml  container.yaml  container.yml  lint.yaml  publish.yaml  test.yaml
.github/workflows/: container.yml
deploy/: nginx.conf
src/: manage.py
src/djangopardy/: asgi.py  settings.py  urls.py  wsgi.py
src/jeopardy/: admin.py  models.py  urls.py  views.py
src/jeopardy/migrations/: 0001_initial.py  0002_alter_answerquestionasked_player_correct_and_more.py  0003_answerquestion_answer_media_and_more.py  0004_alter_answerquestion_answer_text_and_more.py  0005_alter_answerquestion_answer_text_and_more.py  0006_answerquestion_internal_notes.py  0007_alter_answerquestionasked_unique_together.py  0008_answerquestion_attribution.py  0009_answerquestionasked_double_player_and_more.py
src/jeopardy/templates/: answer.html  base.html  cardset.html  gameround.html  overview.html  play.html  question.html
