[project]
name = "djangopardy"
description = "A django-based jeopardy tool"
authors = [{name = "Vanessa Gaube", email = "dev@vanessagaube.de"}]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "django>=5.2.3",
    "django-bootstrap5>=25.1",
    "gunicorn>=23.0.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"


[project.urls]
Documentation = "https://codeberg.org/margau/djangopardy/src/branch/main#readme"
Issues = "https://codeberg.org/margau/djangopardy/issues"
Source = "https://codeberg.org/margau/djangopardy.git"

# no scripts defined

[dependency-groups]
dev = [
  "ruff>=0.15.13",
  "pylint>=4.0.5",
  "pytest>=9.0.3",
  "coverage>=7.14.0",
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

[tool.coverage.run]
source = ["src", "tests"]

# TODO: Dev/CI scripts for lint & co.